--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "license": "ISC",
   "description": "bot,seafood",
   "dependencies": {
+    "body-parser": "^1.20.3",
+    "canvas": "^2.11.2",
     "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "fs": "^0.0.1-security",
     "moment": "^2.30.1",
     "node-telegram-bot-api": "^0.66.0",
     "nodemon": "^3.1.7"
